--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     </div>
 
 
-    <p>Foot Chinko World Cup features a different take on soccer games with a unique blend of pachinko and pinball. As
-        fun as soccer can get!</p>
+    <p>Experience soccer like never before with Foot Chinko World Cup, a game that combines the excitement of traditional soccer with the unpredictable fun of pachinko and pinball. Dive into a world where every match is a thrilling mix of skill and chance, as you guide your team to victory by bouncing the ball through a maze of obstacles and scoring goals in the most unexpected ways. Foot Chinko World Cup offers a refreshing and entertaining twist on classic soccer games, making it as engaging as it is challenging. Perfect for players looking for a unique and fun-filled soccer experience!</p>
+
 
     <h1 class="my-4">You will like</h1>
     <br />
